# agentctl

./: .gitignore  LICENSE  README.md  agentctl  install.sh  pyproject.toml  test.md
agentctl/: cli.py  gh_ops.py  git.py  model.py
